# co-uring-http

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
include/: buffer_ring.hpp  constant.hpp  file_descriptor.hpp  http_message.hpp  http_parser.hpp  http_server.hpp  io_uring.hpp  socket.hpp  sync_wait.hpp  task.hpp  thread_pool.hpp
src/: buffer_ring.cpp  file_descriptor.cpp  http_message.cpp  http_parser.cpp  http_server.cpp  io_uring.cpp  lib.cppm  main.cpp  socket.cpp  sync_wait.cpp  thread_pool.cpp
src/common/: deferred_initialization.cppm  lib.cppm
src/coroutine/: lib.cppm  spawn.cppm  task.cppm  thread_pool.cppm  trait.cppm  wait.cppm
src/http/: lib.cppm  message.cppm  server.cppm
src/io/: buf_ring.cppm  constant.cppm  error.cppm  file.cppm  io_uring.cppm  lib.cppm  socket.cppm
